# t3py

./: .gitignore  .t3.env  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  CONVENTIONS.md  INSTRUCTIONS.md  Makefile  README.rst  USAGE.md  dev_requirements.in  dev_requirements.txt  main.py  openapi.json  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/t3py/: __init__.py  cli.py
src/t3py/consts/: http.py
src/t3py/interfaces/: auth.py
src/t3py/utils/: auth.py  http.py
t3py/: app.py  consts.py  main.py  routes.py
t3py/commands/: check_identity.py  exit.py  identity.py
t3py/interfaces/: auth.py  routes.py  t3py_context.py
t3py/routes/: auth.py  exit.py  index.py
t3py/utils/: auth.py  http.py
tests/: __init__.py  test_cli.py  test_imports.py  test_t3py.py
