[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "t3py"
version = "0.1.0"
description = "Toolkit for using the T3 API"
readme = "README.rst"
authors = [
  {name = "Matt Frisbie", email = "matt@classvsoftware.com"}
]
maintainers = [
  {name = "Matt Frisbie", email = "matt@classvsoftware.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/msfrisbie/t3py/issues"
changelog = "https://github.com/msfrisbie/t3py/blob/master/changelog.md"
homepage = "https://github.com/msfrisbie/t3py"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

