[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "t3py"
dynamic = ["version"]
description = "Toolkit for using the Track & Trace Tools API"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Matt Frisbie", email = "matt@classvsoftware.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { Homepage = "https://github.com/classvsoftware/t3py" }
requires-python = ">=3.7"
dependencies = [
    "typer",
    "requests",
    "rich",
    "textual",
    "httpx"
]

[project.scripts]
t3py = "t3py.main:cli_app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "t3py/_version.py"