[project]
name = "t3py"
version = "0.1.0"
description = "Track & Trace Tools Python CLI"
authors = [{ name = "Matt Frisbie", email = "matt@trackandtrace.tools" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
]

# 👇 This enables the CLI command `t3py`
[project.scripts]
t3py = "t3py.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
